<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="video_library">Video Library</string>
    <string name="no_videos_found_on_server">No videos found on the server</string>

    <string name="type_to_search">Type to Search…</string>

    // Search Patient Screen Tabs
    <string name="tab_anemia_screening">Anemia Screening</string>
    <string name="tab_anemia_follow_up">Anemia Follow-Up</string>
    <string name="tab_diabetes_screening">Diabetes Screening</string>
    <string name="tab_diabetes_follow_up">Diabetes Follow-Up</string>
    <string name="tab_hypertension_screening">Hypertension Screening</string>
    <string name="tab_hypertension_follow_up">Hypertension Follow-Up</string>
    <string name="tab_general">General</string>
    <string name="search_patient">Search Patient</string>

    <string name="medical_history_yes">Yes</string>
    <string name="age">Age</string>
    <string name="years">years</string>
    <string name="months">months</string>
    <string name="days">days</string>
    <string name="sample_name_open_mrs_id_text">Ravi Kumar, 2AGY-87</string>
    <string name="sample_age_text">Age: 16 years 10 months 16 days</string>
    <string name="sample_disease_category">Sample Disease</string>

    <string name="search_text_filed_hint">Find patient by name, ID or mobile</string>
    <string name="no_data_found">No data found</string>
    <string name="patient_not_found">Patient not found!</string>
    <string name="correct_search_string_message">Use correct patient name, or ID, or mobile number to search or you can register a new patient.</string>
    <string name="add_new_patient">Add New Patient</string>
    <string name="presc_pending">Prescription pending</string>
    <string name="priority">Priority</string>
    <string name="search_date_txt">24 May, at 3:15 pm</string>
    <string name="five_presc_received">%1$s prescriptions received</string>
    <string name="presc_received">Prescription received</string>
    <string name="visit_not_uploaded">Visit Not Uploaded</string>
    <string name="search_gender">M 22</string>
    <string name="search_txt_enter">Type Patient name or ID</string>
    <string name="search_hint_text">Previously searched</string>
    <string name="all_patients_txt">All Patients</string>
    <string name="clear">Clear</string>
    <string name="search_pat_not_found_txt">Patient not found!</string>

    <!-- 1. The following sections include strings used for the questionnaire UI -->

    <!-- values/strings.xml -->
    <!-- 1.1 Navigation -->
    <string name="button_pagination_next">Next</string>
    <string name="button_pagination_previous">Previous</string>
    <string name="back_button_text">Back</string>
    <string name="edit_button_text">Edit</string>
    <string name="review_answers_text">Review answers</string>
    <string name="button_review">Review</string>
    <string name="submit_questionnaire">Submit</string>
    <string name="cancel_questionnaire">@android:string/cancel</string>
    <string name="questionnaire_review_mode_title">Review answers before submitting</string>

    <!-- 1.2 Submit Pop-up -->
    <string name="questionnaire_validation_error_headline">Errors found</string>
    <string name="questionnaire_validation_error_supporting_text">Fix the following questions:</string>
    <string name="questionnaire_validation_error_item_text_with_bullet">• %s</string>
    <string name="questionnaire_validation_error_submit_button_text">Submit anyway</string>
    <string name="questionnaire_validation_error_fix_button_text">Fix questions</string>

    <!-- 1.3 Cancel Pop-up -->
    <string name="questionnaire_cancel_text">Do you want to exit the questionnaire?</string>

    <!-- 2.1 All Widgets -->
    <string name="not_answered">Not Answered</string>
    <string name="help">Help</string>

    <!-- 2.2 Boolean -->
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <!-- 2.3 Drop Down -->
    <string name="hyphen">-</string>

    <!-- 2.4 Multi Select / Open Choice -->
    <string name="open_choice_other">Other</string>
    <string name="open_choice_other_hint">Enter custom option</string>
    <string name="open_choice_other_add_another">Add another answer</string>
    <string name="multi_select_dialog_subtitle">Select all that apply</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- 2.5 Date / DateTime -->
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>

    <!-- 2.6 Attachment widget -->
    <string name="take_photo">Take Photo</string>
    <string name="cd_photo_preview">Photo Preview</string>
    <string name="cd_file_icon_preview">File Icon Preview</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="upload_audio">Upload Audio</string>
    <string name="upload_video">Upload Video</string>
    <string name="upload_document">Upload Document</string>
    <string name="upload_file">Upload File</string>
    <string name="delete">Delete</string>
    <string name="max_size_image_above_limit_validation_error_msg">Error: Image size is larger than %1$s MB</string>
    <string name="max_size_file_above_limit_validation_error_msg">Error: File size is larger than %1$s MB</string>
    <string name="upload_failed">Upload failed</string>
    <string name="mime_type_wrong_media_format_validation_error_msg">Error: Wrong media format</string>
    <string name="uploaded">Uploaded</string>
    <string name="image_uploaded">Image uploaded</string>
    <string name="file_uploaded">File uploaded</string>
    <string name="video_uploaded">Video uploaded</string>
    <string name="audio_uploaded">Audio uploaded</string>
    <string name="image_deleted">Image deleted</string>
    <string name="file_deleted">File deleted</string>
    <string name="video_deleted">Video deleted</string>
    <string name="audio_deleted">Audio deleted</string>

    <!-- 2.7 Group -->
    <string name="group_header_add_item_button">Add item</string>

    <!-- 3.1 Validation -->
    <string name="required_constraint_validation_error_msg">Missing answer for required field.</string>
    <string name="min_value_validation_error_msg">Minimum value allowed is: <xliff:g id="min_value">%1$s</xliff:g></string>
    <string name="max_value_validation_error_msg">Maximum value allowed is: <xliff:g id="max_value">%1$s</xliff:g></string>
    <string name="min_length_validation_error_msg">The minimum number of characters that are permitted in the answer is: <xliff:g id="min_length">%1$s</xliff:g></string>
    <string name="max_decimal_validation_error_msg">The maximum number of decimal places that are permitted in the answer is: <xliff:g id="max_value">%1$s</xliff:g></string>

<!--    <string name="regex_validation_error_msg">The answer doesn\'t match regular expression: <xliff:g id="answer_value">%1$s</xliff:g></string>-->
    <string name="regex_validation_error_msg">The input contains characters that are not allowed.</string>
    <string name="number_format_validation_error_msg">Only use (.) between two numbers. Other special characters are not supported.</string>
    <string name="date_format_validation_error_msg">Date format needs to be <xliff:g id="locale_format">%1$s</xliff:g> (e.g. %2$s)</string>
<!--    <string name="integer_format_validation_error_msg">Number must be between <xliff:g id="min_value">%1$s</xliff:g> and <xliff:g id="max_value">%2$s</xliff:g></string>-->
    <string name="integer_format_validation_error_msg">Please enter valid number!</string>
    <string name="decimal_format_validation_error_msg">Please enter valid decimal number</string>
    <string name="optional_helper_text">Optional</string>
    <string name="required">Required</string>
    <string name="required_text_and_new_line">Required\n</string>a
    <string name="space_asterisk">\u0020\u002a</string>
    <string name="repeated_group_title">%1$s. %2$s</string>
    <string name="add_repeated_group_item">Add %1$s</string>



    <string name="abnormal_bp_message">
    Abnormal BP detected. Please recheck BP after 5 minutes.
    &#10;&#10;This dialog will close in %1$02d:%2$02d
  </string>
    <string name="bp_alert_title">BP Alert</string>
    <string name="input_error_title">Input Error</string>
    <string name="systolic_bp_sbp_should_be_greater_than_diastolic_bp_dbp_please_correct_the_values">Systolic BP (SBP) should be greater than Diastolic BP (DBP). Please correct the values.</string>
    <string name="ok_btn_lbl">OK</string>

    <string name="questionnaire_title_hypertension_screening">Hypertension Screening</string>
    <string name="questionnaire_title_anemia_screening">Anemia Screening</string>
    <string name="questionnaire_title_diabetes_screening">Diabetes Screening</string>
    <string name="questionnaire_title_hypertension_followup">Hypertension Followup</string>

    <string name="bp_measurement">BP Measurement - %1$s/%2$s</string>
    <string name="tab_all">All</string>
    <string name="questionnaire_title_anemia_followup">Anemia Followup</string>
    <string name="years_abbr">Y</string>
    <string name="anemia_followup">Anemia Followup</string>
    <string name="medical_history_no">No</string>

    <string name="confirm_discard_changes_title">This visit is incomplete!</string>
    <string name="confirm_discard_changes_content">Are you sure want to discard all the details of this visit?</string>
    <string name="confirm_discard_changes_button_dialog">Discard</string>
    <string name="confirm_continue_changes_button_dialog">Continue</string>

    <string name="please_wait">Please wait...</string>
    <string name="no_data_found_txt">No data found!</string>

</resources>