<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:id="@+id/ll_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/toolbar_ET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/type_to_search"
                    android:singleLine="true" />

                <ImageView
                    android:id="@+id/toolbar_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    app:srcCompat="@drawable/ic_baseline_clear_24" />

                <ImageView
                    android:id="@+id/toolbar_search"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:paddingHorizontal="5dp"
                    app:srcCompat="@drawable/ic_baseline_search_24" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:tabMode="scrollable">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_anemia_screening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_anemia_screening" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_anemia_follow_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_anemia_follow_up" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_diabetes_screening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_diabetes_screening" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_diabetes_follow_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_diabetes_follow_up" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_hypertension_screening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_hypertension_screening" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_hypertension_follow_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_hypertension_follow_up" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_general" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>